--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,13 +4,14 @@
     "com.unity.ai.navigation": "2.0.0",
     "com.unity.animation.rigging": "1.3.0",
     "com.unity.cinemachine": "3.1.0",
+    "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.8.2",
     "com.unity.package-validation-suite": "0.73.0-preview",
     "com.unity.probuilder": "6.0.1",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.splines": "2.6.1",
-    "com.unity.test-framework": "1.4.3",
+    "com.unity.test-framework": "1.4.4",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "17.0.3",
